--- a/ControladorRobo/app/src/main/res/layout/activity_main.xml
+++ b/ControladorRobo/app/src/main/res/layout/activity_main.xml
@@ -52,4 +52,15 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="15dp" />
+
+    <SeekBar
+        android:id="@+id/skSpeed"
+        android:layout_width="140dp"
+        android:layout_height="35dp"
+        android:layout_alignBottom="@+id/btnStopRobot"
+        android:layout_marginStart="41dp"
+        android:layout_toEndOf="@+id/btnLeft"
+        android:max="@integer/maxSkSpeed"
+        android:progress="@integer/pgrSkSpeed" />
+
 </RelativeLayout>
